fix: wrap proposed options

--- a/src/components/AddProposal/prop.module.css
+++ b/src/components/AddProposal/prop.module.css
@@ -20,7 +20,7 @@
 
 .optionboxcontainer {
   display: flex;
-  flex-flow: column;
+  flex-wrap: wrap;
   gap: 10px;
   margin-top: 20px;
 }
